on mobile view fix platforms list width

--- a/src/App.css
+++ b/src/App.css
@@ -197,8 +197,8 @@ ul li {
 /* style mobile */
 @media (max-width: 375px) {
   body {
-    width: 375px;
-    height: 667px;
+    width: 100vw;
+    height: 100vh;
     background-image: url("src/assets/Bitmap.png");
     background-repeat: no-repeat;
     background-size: cover;
@@ -210,10 +210,11 @@ ul li {
     position: absolute;
     top: 0;
     left: 0;
-    width: 375px;
+    width: 100vw;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.85);
     z-index: -1;
+    margin: 0;
   }
   nav {
     position: absolute;
@@ -224,8 +225,8 @@ ul li {
   }
 
   main {
-    width: 375px;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     padding: 0;
     margin: 0;
   }
@@ -263,7 +264,9 @@ ul li {
   ul {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    width: 315px;
+    gap: 0;
   }
   ul li:nth-child(1) img {
     width: 56px;
@@ -306,7 +309,7 @@ ul li {
     margin: 0;
   }
   .hero-img {
-    background: none;
+    display: none;
   }
   .combined-shapes {
     display: none;
